--- a/.github/workflows/visuals-extraction-citation.yml
+++ b/.github/workflows/visuals-extraction-citation.yml
@@ -21,72 +21,60 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pdfplumber markdown-it-py
+          pip install markdown-it-py  # Only needed for MD parsing (pdfplumber removed)
 
-      - name: Install Node.js dependencies
-        run: npm install -g @mermaid-js/mermaid-cli
+      # Removed: npm install -g @mermaid-js/mermaid-cli (not used in script)
 
-      - name: Scan and Generate Mermaid
+      - name: Scan and Generate Mermaid for Markdown Files Only
         run: |
           python - <<EOF
           import os
-          import pdfplumber
           from markdown_it import MarkdownIt
 
+          def has_mermaid_already(content):
+              return '```mermaid' in content  # Avoid duplicates
+
           def add_mermaid(file_path):
-              if file_path.endswith('.md'):
-                  try:
-                      with open(file_path, 'r', encoding='utf-8') as f:
-                          content = f.read()
-                      md = MarkdownIt()
-                      # Basic table detection (can be improved with md parser table plugin)
-                      has_table = '|' in content and content.count('|') > 10  # rough heuristic
-                      if has_table:
-                          mermaid = '''pie title Detected Table Data Example
-          "Category A" : 45
-          "Category B" : 30
-          "Category C" : 25'''
-                      else:
-                          mermaid = '''graph TD
+              try:
+                  with open(file_path, 'r', encoding='utf-8') as f:
+                      content = f.read()
+
+                  if has_mermaid_already(content):
+                      print(f"Skipping {file_path} — already has Mermaid block")
+                      return
+
+                  md = MarkdownIt()
+                  # Improved table detection: look for markdown table markers
+                  has_table = '|' in content and content.count('|') > 20 and '---' in content
+
+                  if has_table:
+                      mermaid = '''pie title Detected Table Data (Placeholder)
+          "Rows" : 60
+          "Columns Avg" : 40
+          "Categories" : 20'''
+                  else:
+                      mermaid = '''graph TD
           A[File Root] --> B[Headers / Sections]
           B --> C[Content / Tables]
           C --> D[Visual Representation]'''
 
-                      citation = f"""\n\n```mermaid
+                  citation = f"""\n\n```mermaid
           {mermaid}
           ```
-          
+
           *By Sheldon K Salmon - Source: https://github.com/AionSystem/AION-BRAIN*"""
-                      with open(file_path, 'a', encoding='utf-8') as f:
-                          f.write(citation)
-                      print(f"Added Mermaid + citation to: {file_path}")
-                  except Exception as e:
-                      print(f"Error processing MD {file_path}: {e}")
 
-              elif file_path.lower().endswith('.pdf'):
-                  try:
-                      os.makedirs('visuals', exist_ok=True)
-                      with pdfplumber.open(file_path) as pdf:
-                          for i, page in enumerate(pdf.pages):
-                              tables = page.extract_tables()
-                              if tables and len(tables) > 0:
-                                  # Very basic placeholder conversion — enhance later with real data
-                                  mermaid = '''graph LR
-          Table --> Row1[Row 1 Data]
-          Row1 --> Value1[Extracted Value]'''
-                                  out_path = f"visuals/{os.path.basename(file_path)}_page{i+1}.md"
-                                  with open(out_path, 'w', encoding='utf-8') as f:
-                                      f.write(f"```mermaid\n{mermaid}\n```\n\n*By Sheldon K Salmon - Source: https://github.com/AionSystem/AION-BRAIN*")
-                                  print(f"Generated visual from PDF table: {out_path}")
-                              else:
-                                  print(f"No tables found on page {i+1} of {file_path}")
-                  except Exception as e:
-                      print(f"PDF error {file_path}: {e}")
+                  with open(file_path, 'a', encoding='utf-8') as f:
+                      f.write(citation)
+                  print(f"Added Mermaid + citation to: {file_path}")
 
-          # Walk repo and process relevant files
+              except Exception as e:
+                  print(f"Error processing {file_path}: {e}")
+
+          # Process only .md files (skip PDFs entirely)
           for root, _, files in os.walk('.'):
               for file in files:
-                  if file.endswith(('.md', '.pdf')) and not file.startswith('.') and 'visuals/' not in root:
+                  if file.endswith('.md') and not file.startswith('.') and 'visuals/' not in root:
                       full_path = os.path.join(root, file)
                       add_mermaid(full_path)
           EOF
@@ -94,5 +82,5 @@ jobs:
       - name: Commit Visual Updates
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Auto-generated Mermaid visuals & citations [ci skip]"
-          file_pattern: "*.md visuals/*.md"
+          commit_message: "Auto-generated Mermaid visuals & citations for MD files [ci skip]"
+          file_pattern: "*.md"
